# SSIP

./: .gitignore  LICENSE  README.md  devenv.nix  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  pull-request.yaml
benchmarking/: GB_Z_merge_Coh_est.py  GB_Z_singleqs_Coh_est.py  GB_ext_merges.py  GB_par_ext_merges.py  GB_par_singleqs.py  GB_singleqs.py  gross_code_ext_merges.py  gross_code_int_merges.py  gross_code_par_ext_merges.py  gross_code_par_singleqs.py  gross_code_singleqs.py  lcs_Z_merge_Coh_est.py  lcs_Z_singleqs_Coh_est.py  lcs_ext_merges.py  lcs_par_ext_merges.py  lcs_par_singleqs.py  lcs_singleqs.py  small_examples.py
benchmarking/results/: gb_X_singleqs.txt  gb_Z_singleqs.txt  gb_ext_X_merges.txt  gb_ext_Z_merges.txt  gb_par_X_singleqs.txt  gb_par_Z_singleqs.txt  gb_par_ext_X_merges.txt  gb_par_ext_Z_merges.txt  gross_X_singleqs.txt  gross_Z_singleqs.txt  gross_ext_X_merges.txt  gross_ext_Z_merges.txt  gross_int_X_merges.txt  gross_int_Z_merges.txt  gross_par_X_singleqs.txt  gross_par_Z_singleqs.txt  gross_par_ext_X_merges.txt  gross_par_ext_Z_merges.txt  lcs_X_singleqs.txt  lcs_Z_singleqs.txt  lcs_ext_X_merges.txt  lcs_ext_Z_merges.txt  (+4 more)
demos/: demo_basics.py  demo_surgery.py
docs/: build.sh
ssip/: auto_surgeries.py  basic_functions.py  code_examples.py  coequalisers.py  distance.py  lifted_product.py  merge_result.py  monic_span_checker.py  pushouts.py
tests/: test_auto_surgeries.py  test_basic_functions.py  test_coequalisers.py  test_distance.py  test_lifted_product.py  test_monic_span_checker.py  test_pushouts.py
(+3 files in other folders)
